added data to json

--- a/src/projectsList.json
+++ b/src/projectsList.json
@@ -6,42 +6,42 @@
     "website": "",
     "image": "./assets/scheduler.png",
     "gitHub": "https://github.com/Asherbeck10/Work-Day-Scheduler",
-    "name": "Schedular"
+    "name": "Work Day Scheduler"
   },
   {
     "id": 2,
     "website": "",
     "image": "",
     "gitHub": "",
-    "name": ""
+    "name": "Team Profile Generator"
   },
   {
     "id": 3,
     "website": "",
     "image": "",
     "gitHub": "",
-    "name": ""
+    "name": "Code Quiz"
   },
   {
     "id": 4,
     "website": "",
     "image": "",
     "gitHub": "",
-    "name": ""
+    "name": "Professional README Generator"
   },
   {
     "id": 5,
     "website": "",
     "image": "",
     "gitHub": "",
-    "name": ""
+    "name": "Weather Dashboard"
   },
   {
     "id": 6,
     "website": "",
     "image": "",
     "gitHub": "",
-    "name": ""
+    "name": "Bites and Booze"
   }
   
   
