added nav to project

--- a/src/projectsList.json
+++ b/src/projectsList.json
@@ -2,43 +2,43 @@
 
 [
   {
-    "id": 1,
-    "website": "",
+    "id": 0,
+    "website": "https://asherbeck10.github.io/Work-Day-Scheduler/",
     "image": "../assets/scheduler.png",
     "gitHub": "https://github.com/Asherbeck10/Work-Day-Scheduler",
     "name": "Work Day Scheduler",
     "skills":"HTML"
   },
   {
-    "id": 2,
+    "id": 1,
     "website": "",
     "image": "",
     "gitHub": "",
     "name": "Team Profile Generator"
   },
   {
-    "id": 3,
+    "id": 2,
     "website": "",
     "image": "",
     "gitHub": "",
     "name": "Code Quiz"
   },
   {
-    "id": 4,
+    "id": 3,
     "website": "",
     "image": "",
     "gitHub": "",
     "name": "Professional README Generator"
   },
   {
-    "id": 5,
+    "id": 4,
     "website": "",
     "image": "",
     "gitHub": "",
     "name": "Weather Dashboard"
   },
   {
-    "id": 6,
+    "id": 5,
     "website": "",
     "image": "",
     "gitHub": "",
